--- a/Şifre_Çöz/index.html
+++ b/Şifre_Çöz/index.html
@@ -15,9 +15,7 @@
   --accent:#22c55e;
   --info:#3b82f6;
 }
-
 *{ box-sizing:border-box; }
-
 body{
   margin:0;
   padding:14px;
@@ -28,111 +26,47 @@ body{
   color:var(--text);
   font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
 }
-
-body > *{
-  max-width:720px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-h2{
-  text-align:center;
-  margin:10px 0 18px;
-  font-weight:600;
-}
-
+body>*{max-width:720px;margin:auto;}
+h2{text-align:center;margin:10px 0 18px;font-weight:600;}
 #pinDisplay{
-  font-size:3rem;
-  font-weight:700;
-  letter-spacing:0.15em;
-  text-align:center;
-  padding:16px;
-  border-radius:16px;
+  font-size:3rem;font-weight:700;letter-spacing:.15em;text-align:center;
+  padding:16px;border-radius:16px;
   background:linear-gradient(135deg,#052e16,#064e3b);
-  border:1px solid #064e3b;
-  color:#ecfdf5;
-  box-shadow:0 10px 40px #00000080;
-  margin-bottom:16px;
+  border:1px solid #064e3b;color:#ecfdf5;
+  box-shadow:0 10px 40px #00000080;margin-bottom:16px;
 }
-
 #video{
-  width:100%;
-  max-height:45vh;
-  border-radius:16px;
-  border:1px solid var(--border);
-  background:#000;
+  width:100%;max-height:45vh;border-radius:16px;
+  border:1px solid var(--border);background:#000;
   box-shadow:0 10px 30px #00000080;
 }
-
 input[type="password"]{
-  width:100%;
-  padding:12px 14px;
-  margin-top:6px;
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:14px;
-  color:var(--text);
-  backdrop-filter: blur(14px);
+  width:100%;padding:12px 14px;margin-top:6px;
+  background:var(--card);border:1px solid var(--border);
+  border-radius:14px;color:var(--text);
 }
-
 button{
-  background:#1f2937;
-  color:var(--text);
+  background:#1f2937;color:var(--text);
   border:1px solid var(--border);
-  border-radius:14px;
-  padding:12px 16px;
-  cursor:pointer;
-  transition:all .25s ease;
+  border-radius:14px;padding:12px 16px;
+  cursor:pointer;transition:.25s;
 }
-
-button:hover{ transform:translateY(-1px); background:#273449; }
-button:active{ transform:scale(.97); }
-button:disabled{ opacity:.5; cursor:not-allowed; }
-
-.row{
-  display:flex;
-  gap:10px;
-  margin-top:10px;
-  align-items:center;
-  flex-wrap:wrap;
-}
-
-label{
-  display:flex;
-  align-items:center;
-  gap:6px;
-  color:var(--muted);
-  font-size:.95em;
-}
-
+button:hover{transform:translateY(-1px);background:#273449;}
+button:disabled{opacity:.5;cursor:not-allowed;}
+.row{display:flex;gap:10px;margin-top:10px;flex-wrap:wrap;}
+label{display:flex;gap:6px;color:var(--muted);}
 #status{
-  margin-top:12px;
-  padding:12px;
-  border-radius:14px;
-  background:var(--card);
-  border:1px solid var(--border);
-  white-space:pre-wrap;
+  margin-top:12px;padding:12px;border-radius:14px;
+  background:var(--card);border:1px solid var(--border);
   border-left:4px solid var(--info);
 }
-
-.small{
-  font-size:.85em;
-  color:var(--muted);
-  margin-top:6px;
-}
-
-@media(max-width:520px){
-  #pinDisplay{ font-size:2.4rem; }
-  button{ width:100%; }
-}
+.small{font-size:.85em;color:var(--muted);}
 </style>
 </head>
 
 <body>
 <h2>QR decryptor</h2>
-
 <div id="pinDisplay">---</div>
-
 <video id="video" playsinline autoplay></video>
 
 <div class="row">
@@ -148,10 +82,7 @@ label{
   <button id="forget">Unut</button>
 </div>
 
-<div class="small">
-  Şifre localStorage’da tutulur. Bu cihazı paylaşanlar için risklidir.
-</div>
-
+<div class="small">Şifre localStorage’da tutulur. Bu cihazı paylaşanlar için risklidir.</div>
 <div id="status"></div>
 
 <script src="https://unpkg.com/jsqr/dist/jsQR.js"></script>
@@ -159,11 +90,15 @@ label{
 <script>
 const STORAGE_KEY='qr_decryptor_saved_password';
 const video=document.getElementById('video');
+const pwdInput=document.getElementById('pwd');
+const rememberChk=document.getElementById('remember');
+const statusBox=document.getElementById('status');
+
 let stream=null, scanActive=false;
 
-function savePassword(p){localStorage.setItem(STORAGE_KEY,p);}
-function loadSavedPassword(){return localStorage.getItem(STORAGE_KEY);}
-function forgetSavedPassword(){localStorage.removeItem(STORAGE_KEY);}
+const savePassword=p=>localStorage.setItem(STORAGE_KEY,p);
+const loadSavedPassword=()=>localStorage.getItem(STORAGE_KEY);
+const forgetSavedPassword=()=>localStorage.removeItem(STORAGE_KEY);
 
 function b64_to_u8(b){
   const bin=atob(b), a=new Uint8Array(bin.length);
@@ -180,27 +115,25 @@ async function deriveKey(p,s){
   );
 }
 
-async function decryptFromQR(qrData,pwd){
+async function decryptFromQR(data,pwd){
   try{
-    const o=JSON.parse(qrData);
+    const o=JSON.parse(data);
     const key=await deriveKey(pwd,b64_to_u8(o.salt));
     const pt=await crypto.subtle.decrypt(
-      {name:'AES-GCM',iv:b64_to_u8(o.iv)},
-      key,b64_to_u8(o.ct)
+      {name:'AES-GCM',iv:b64_to_u8(o.iv)},key,b64_to_u8(o.ct)
     );
-    const code=new TextDecoder().decode(pt).split('|')[0];
-    document.getElementById('pinDisplay').textContent=code;
-    document.getElementById('status').textContent='PIN çözüldü.';
+    pinDisplay.textContent=new TextDecoder().decode(pt).split('|')[0];
+    statusBox.textContent='PIN çözüldü.';
   }catch{
-    document.getElementById('pinDisplay').textContent='---';
-    document.getElementById('status').textContent='Decrypt başarısız.';
+    pinDisplay.textContent='---';
+    statusBox.textContent='Decrypt başarısız.';
   }
 }
 
 async function startCamera(){
   if(scanActive) return;
-  document.getElementById('status').textContent='Kamera açılıyor...';
-  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:'environment'},audio:false});
+  statusBox.textContent='Kamera açılıyor...';
+  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:'environment'}});
   video.srcObject=stream;
   await video.play();
   scanActive=true;
@@ -210,7 +143,7 @@ async function startCamera(){
 }
 
 function stopCamera(){
-  if(stream) stream.getTracks().forEach(t=>t.stop());
+  stream?.getTracks().forEach(t=>t.stop());
   scanActive=false;
   startBtn.disabled=false;
   stopBtn.disabled=true;
@@ -219,7 +152,7 @@ function stopCamera(){
 function scanLoop(){
   const c=document.createElement('canvas');
   const x=c.getContext('2d');
-  const loop=()=>{
+  (function loop(){
     if(!scanActive) return;
     if(video.readyState===video.HAVE_ENOUGH_DATA){
       c.width=video.videoWidth;
@@ -235,26 +168,40 @@ function scanLoop(){
       }
     }
     requestAnimationFrame(loop);
-  };
-  loop();
+  })();
 }
 
-const startBtn=document.getElementById('startBtn');
-const stopBtn=document.getElementById('stopBtn');
-const pwdInput=document.getElementById('pwd');
+/* === ŞİFRE KAYDETME MANTIĞI === */
+rememberChk.onchange=()=>{
+  if(rememberChk.checked && pwdInput.value){
+    savePassword(pwdInput.value);
+    statusBox.textContent='Şifre kaydedildi.';
+  }else{
+    forgetSavedPassword();
+    statusBox.textContent='Şifre kaydı kapatıldı.';
+  }
+};
 
-startBtn.onclick=startCamera;
-stopBtn.onclick=stopCamera;
+pwdInput.oninput=()=>{
+  if(rememberChk.checked) savePassword(pwdInput.value);
+};
 
 document.getElementById('forget').onclick=()=>{
   forgetSavedPassword();
   pwdInput.value='';
-  document.getElementById('status').textContent='Şifre silindi.';
+  rememberChk.checked=false;
+  statusBox.textContent='Şifre silindi.';
 };
+
+startBtn.onclick=startCamera;
+stopBtn.onclick=stopCamera;
 
 window.onload=()=>{
   const s=loadSavedPassword();
-  if(s){ pwdInput.value=s; document.getElementById('remember').checked=true; }
+  if(s){
+    pwdInput.value=s;
+    rememberChk.checked=true;
+  }
   startCamera().catch(()=>{});
 };
 </script>
