--- a/Şifre_Çöz/index.html
+++ b/Şifre_Çöz/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="utf-8">
-<title>QR Decryptor — Dark Modern</title>
+<title>QR Decryptor</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
 <style>
@@ -207,3 +207,4 @@ window.onload=()=>{
 </script>
 </body>
 </html>
+
