--- a/My_Youtube/index.html
+++ b/My_Youtube/index.html
@@ -4,236 +4,92 @@
 <meta charset="UTF-8">
 <title>MediaTube</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- 🔴 YouTube tarzı favicon -->
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 80'>
 <rect x='0' y='0' width='120' height='80' rx='20' fill='%23FF0000'/>
 <polygon points='50,20 90,40 50,60' fill='white'/>
 </svg>">
-
 <style>
-body {
-    margin: 0;
-    background: #0f0f0f;
-    color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #202020;
-    padding: 12px 20px;
-}
-
-header h1 {
-    color: #ff0000;
-    margin: 0;
-}
-
-header button {
-    font-size: 22px;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-}
-
-#container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px,1fr));
-    gap: 16px;
-    padding: 20px;
-}
-
-.card {
-    background: #181818;
-    border-radius: 10px;
-    overflow: hidden;
-    cursor: pointer;
-    transition: transform .2s;
-}
-
-.card:hover {
-    transform: scale(1.04);
-}
-
-.thumb {
-    position: relative;
-    width: 100%;
-    height: 130px;
-    background: #000;
-}
-
-.thumb img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.title {
-    padding: 10px;
-    font-size: 14px;
-    word-break: break-word;
-}
-
-/* Player */
-#player {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,.9);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
-}
-
-#player video,
-#player audio {
-    max-width: 90%;
-    max-height: 90%;
-}
+body { margin:0; background:#0f0f0f; color:#fff; font-family:Arial,Helvetica,sans-serif; }
+header { display:flex; justify-content:space-between; align-items:center; background:#202020; padding:12px 20px; }
+header h1 { color:#ff0000; margin:0; }
+header button { font-size:22px; background:none; border:none; color:#fff; cursor:pointer; }
+#container { display:grid; grid-template-columns:repeat(auto-fill,minmax(220px,1fr)); gap:16px; padding:20px; }
+.card { background:#181818; border-radius:10px; overflow:hidden; cursor:pointer; transition:transform .2s; }
+.card:hover { transform:scale(1.04); }
+.thumb { position:relative; width:100%; height:130px; background:#000; }
+.thumb img { width:100%; height:100%; object-fit:cover; }
+.title { padding:10px; font-size:14px; word-break:break-word; }
+#player { position:fixed; inset:0; background:rgba(0,0,0,.9); display:none; align-items:center; justify-content:center; z-index:10; }
+#player video,#player audio { max-width:90%; max-height:90%; }
 </style>
 </head>
-
 <body>
 
 <header>
     <h1>MediaTube</h1>
     <div>
         <button onclick="loadMedia()">⟳</button>
-        <button onclick="openSettings()">⚙️</button>
     </div>
 </header>
 
 <div id="container"></div>
 <div id="player" onclick="closePlayer()"></div>
 
-<!-- Ayarlar -->
-<div id="settings" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.7);align-items:center;justify-content:center;z-index:20;">
-    <div style="background:#202020;padding:20px;border-radius:10px;width:300px;">
-        <h3>Ayarlar</h3>
-        <input id="serverInput" placeholder="https://xxx.ts.net"
-               style="width:100%;padding:8px;background:#121212;border:1px solid #333;color:#fff;">
-        <button onclick="saveServer()"
-                style="margin-top:10px;width:100%;padding:10px;background:#ff0000;border:none;color:#fff;">
-            Kaydet
-        </button>
-    </div>
-</div>
-
 <script>
-let SERVER = localStorage.getItem("server") || "";
-
-function api(path) {
-    return SERVER ? SERVER + path : path;
-}
-
-// ================== SERVER CHECK ==================
-async function checkServer() {
-    if (!SERVER) return false;
-
+async function loadMedia() {
     try {
-        const controller = new AbortController();
-        setTimeout(() => controller.abort(), 2000);
+        const res = await fetch("/.netlify/functions/media");
+        const list = await res.json();
 
-        await fetch(SERVER + "/ping", { signal: controller.signal });
-        return true;
-    } catch {
-        localStorage.removeItem("server");
-        SERVER = "";
-        return false;
+        const container = document.getElementById("container");
+        container.innerHTML = "";
+
+        list.forEach(item => {
+            const card = document.createElement("div");
+            card.className = "card";
+
+            const thumb = document.createElement("div");
+            thumb.className = "thumb";
+
+            const img = document.createElement("img");
+            img.src = item.thumb;
+            img.onerror = () => { img.src = "data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAwIiBoZWlnaHQ9IjEyMCI+🎬</svg>"; };
+            thumb.appendChild(img);
+
+            const title = document.createElement("div");
+            title.className = "title";
+            title.textContent = item.name;
+
+            card.onclick = () => play(item.url);
+
+            card.appendChild(thumb);
+            card.appendChild(title);
+            container.appendChild(card);
+        });
+    } catch(e) {
+        console.error("Media load error:", e);
     }
 }
 
-// ================== MEDIA LOAD ==================
-async function loadMedia() {
-    const ok = await checkServer();
-    if (SERVER && !ok) return;
-
-    const res = await fetch(api("/api/media"));
-    const list = await res.json();
-
-    const container = document.getElementById("container");
-    if (!container) return;
-
-    container.innerHTML = "";
-
-    list.forEach(item => {
-        const card = document.createElement("div");
-        card.className = "card";
-
-        const thumb = document.createElement("div");
-        thumb.className = "thumb";
-
-        const img = document.createElement("img");
-        img.src = api(item.thumb);
-
-        img.onerror = () => {
-            img.src = "data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjAwIiBoZWlnaHQ9IjEyMCI+🎬</svg>";
-        };
-
-        thumb.appendChild(img);
-
-        const title = document.createElement("div");
-        title.className = "title";
-        title.textContent = item.name;
-
-        card.onclick = () => play(api(item.url));
-
-        card.appendChild(thumb);
-        card.appendChild(title);
-        container.appendChild(card);
-    });
-}
-
-// ================== PLAYER ==================
 function play(url) {
     const player = document.getElementById("player");
-    if (!player) return;
-
     player.innerHTML = "";
-
-    const el = url.endsWith(".mp3")
-        ? document.createElement("audio")
-        : document.createElement("video");
-
+    const el = url.endsWith(".mp3") ? document.createElement("audio") : document.createElement("video");
     el.src = url;
     el.controls = true;
     el.autoplay = true;
-
     player.appendChild(el);
     player.style.display = "flex";
 }
 
 function closePlayer() {
     const p = document.getElementById("player");
-    if (!p) return;
-
     p.style.display = "none";
     p.innerHTML = "";
 }
 
-// ================== SETTINGS ==================
-function openSettings() {
-    document.getElementById("serverInput").value = SERVER;
-    document.getElementById("settings").style.display = "flex";
-}
-
-function saveServer() {
-    SERVER = document.getElementById("serverInput").value.trim();
-    localStorage.setItem("server", SERVER);
-    document.getElementById("settings").style.display = "none";
-    loadMedia();
-}
-
-// 🚀 DOM hazır olunca başlat
-document.addEventListener("DOMContentLoaded", () => {
-    loadMedia();
-});
+document.addEventListener("DOMContentLoaded", loadMedia);
 </script>
-
 </body>
 </html>
