--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Projelerim</title>
+<title>My Websites</title>
 
 <style>
 :root{
@@ -129,7 +129,7 @@ a:hover{text-decoration:underline}
 <body>
 
 <header>
-  <h1>📂 Projeler</h1>
+  <h1>📂 My Websites</h1>
   <div class="controls">
     <input id="search" placeholder="🔍 Proje ara...">
     <button id="themeToggle">🌙 / ☀️</button>
