--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>My Website</title>
+<title>My Websites</title>
 
 <!-- ✅ FAVICON -->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
